// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit hack for weird matchMedia behavior 1`] = `"@media (min-height: 220px) { .__mqMatchClass__ {} }"`;

exports[`Unit hack for weird matchMedia behavior 2`] = `
"@media (min-height: 440px) { .__mqMatchClass__ {} }
@media (min-height: 220px) { .__mqMatchClass__ {} }"
`;

exports[`Unit hack for weird matchMedia behavior 3`] = `"@media (min-height: 440px) { .__mqMatchClass__ {} }"`;

exports[`Unit multiple queries match at once 1`] = `
Array [
  Array [
    Array [
      "(min-height: 220)",
    ],
  ],
  Array [
    Array [
      "(min-height: 440)",
    ],
  ],
  Array [
    Array [
      "(min-height: 220)",
      "(min-height: 440)",
    ],
  ],
]
`;

exports[`Unit on and off works 1`] = `
Array [
  Array [
    Array [
      "(min-height: 220)",
    ],
  ],
  Array [
    Array [
      "(min-height: 220)",
    ],
  ],
]
`;

exports[`Unit register and unregister work 1`] = `
Array [
  Array [
    Array [
      "(min-height: 220)",
    ],
  ],
  Array [
    Array [],
  ],
]
`;

exports[`Unit returns correct snapshot 1`] = `Array []`;

exports[`Unit returns correct snapshot 2`] = `
Array [
  Object {
    "matches": true,
    "parsed": "(min-height: 220)",
    "raw": "(min-height: 220)",
  },
]
`;

exports[`Unit returns correct snapshot 3`] = `
Array [
  Object {
    "matches": false,
    "parsed": "(min-height: 220)",
    "raw": "(min-height: 220)",
  },
]
`;

exports[`Unit triggers events on matched query list change 1`] = `
Array [
  Array [
    Array [
      "(min-height: 220)",
    ],
  ],
  Array [
    Array [],
  ],
  Array [
    Array [
      "(min-height: 220)",
    ],
  ],
]
`;

exports[`Unit works with deprecated methods 1`] = `
Array [
  Array [
    Array [
      "(min-height: 220)",
    ],
  ],
  Array [
    Array [],
  ],
  Array [
    Array [
      "(min-height: 220)",
    ],
  ],
]
`;
